[package]
name = "rlox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
#default = ["debug_trace_execution"]
debug_trace_execution = []


[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench_equals"
harness = false
